syntax = "proto3";

package main;

option go_package = "./proto";

// 添加专题
message AddSubjectReq {
  int64 id = 1; //专题id
  int64 category_id = 2; //专题分类id
  string title = 3; //专题标题
  string pic = 4; //专题主图
  int32 product_count = 5; //关联产品数量
  int32 recommend_status = 6; //推荐状态：0->不推荐；1->推荐
  int32 collect_count = 7; //收藏数
  int32 read_count = 8; //阅读数
  int32 comment_count = 9; //评论数
  string album_pics = 10; //画册图片用逗号分割
  string description = 11; //专题内容
  int32 show_status = 12; //显示状态：0->不显示；1->显示
  string content = 13; //专题内容
  int32 forward_count = 14; //转发数
  string category_name = 15; //专题分类名称
  string create_by = 16; //创建者
  int32 sort = 17; //排序
}

message AddSubjectResp {
  string pong = 1;
}

// 删除专题
message DeleteSubjectReq {
  repeated int64 ids = 1;
}

message DeleteSubjectResp {
  string pong = 1;
}

// 更新专题
message UpdateSubjectReq {
  int64 id = 1; //专题id
  int64 category_id = 2; //专题分类id
  string title = 3; //专题标题
  string pic = 4; //专题主图
  int32 product_count = 5; //关联产品数量
  int32 recommend_status = 6; //推荐状态：0->不推荐；1->推荐
  int32 collect_count = 7; //收藏数
  int32 read_count = 8; //阅读数
  int32 comment_count = 9; //评论数
  string album_pics = 10; //画册图片用逗号分割
  string description = 11; //专题内容
  int32 show_status = 12; //显示状态：0->不显示；1->显示
  string content = 13; //专题内容
  int32 forward_count = 14; //转发数
  string category_name = 15; //专题分类名称
  string update_by = 18; //更新者
  int32 sort = 19; //排序
}

message UpdateSubjectResp {
  string pong = 1;
}

// 更新专题状态
message UpdateSubjectStatusReq {
  repeated int64 ids = 1; //专题id
  int32 recommend_status = 6; //推荐状态：0->不推荐；1->推荐
  int32 show_status = 12; //显示状态：0->不显示；1->显示
  string update_by = 18; //更新者
}

message UpdateSubjectStatusResp {
  string pong = 1;
}

// 查询专题详情
message QuerySubjectDetailReq {
    int64 id = 1;
}

message QuerySubjectDetailResp {
  int64 id = 1; //专题id
  int64 category_id = 2; //专题分类id
  string title = 3; //专题标题
  string pic = 4; //专题主图
  int32 product_count = 5; //关联产品数量
  int32 recommend_status = 6; //推荐状态：0->不推荐；1->推荐
  int32 collect_count = 7; //收藏数
  int32 read_count = 8; //阅读数
  int32 comment_count = 9; //评论数
  string album_pics = 10; //画册图片用逗号分割
  string description = 11; //专题内容
  int32 show_status = 12; //显示状态：0->不显示；1->显示
  string content = 13; //专题内容
  int32 forward_count = 14; //转发数
  string category_name = 15; //专题分类名称
  string create_by = 16; //创建者
  string create_time = 17; //创建时间
  string update_by = 18; //更新者
  string update_time = 19; //更新时间
  int32 sort = 20; //排序
}

// 分页查询专题列表
message QuerySubjectListReq {
  int64 category_id = 1; //专题分类id
  string title = 2; //专题标题
  int32 recommend_status = 3; //推荐状态：0->不推荐；1->推荐
  int32 show_status = 4; //显示状态：0->不显示；1->显示
  string category_name = 5; //专题分类名称
  int64 page_num = 6; //第几页
  int64 page_size = 7; //每页的数量
}

message SubjectListData {
  int64 id = 1; //专题id
  int64 category_id = 2; //专题分类id
  string title = 3; //专题标题
  string pic = 4; //专题主图
  int32 product_count = 5; //关联产品数量
  int32 recommend_status = 6; //推荐状态：0->不推荐；1->推荐
  int32 collect_count = 7; //收藏数
  int32 read_count = 8; //阅读数
  int32 comment_count = 9; //评论数
  string album_pics = 10; //画册图片用逗号分割
  string description = 11; //专题内容
  int32 show_status = 12; //显示状态：0->不显示；1->显示
  string content = 13; //专题内容
  int32 forward_count = 14; //转发数
  string category_name = 15; //专题分类名称
  string create_by = 16; //创建者
  string create_time = 17; //创建时间
  string update_by = 18; //更新者
  string update_time = 19; //更新时间
  int32 sort = 20; //排序
}

message QuerySubjectListResp {
  int64 total = 1;
  repeated  SubjectListData list = 2;
}

message UpdateSubjectRecommendStatusReq {
  repeated int64 ids = 1;
  int32 Status = 2;
}

message UpdateSubjectRecommendStatusResp {
  string pong = 1;
}

message SubjectListByIdsReq {
  repeated int64 ids = 1;

}
message UpdateSubjectSortReq {
  int64 id = 1;
  int32 Sort = 2;
}
// 专题
service SubjectService {
  // 添加专题
  rpc AddSubject(AddSubjectReq) returns (AddSubjectResp){}
  // 删除专题
  rpc DeleteSubject(DeleteSubjectReq) returns (DeleteSubjectResp){}
  // 更新专题
  rpc UpdateSubject(UpdateSubjectReq) returns (UpdateSubjectResp ){}
  // 更新专题状态
  rpc UpdateSubjectStatus(UpdateSubjectStatusReq) returns (UpdateSubjectStatusResp ){}
  // 查询专题详情
   rpc QuerySubjectDetail(QuerySubjectDetailReq) returns (QuerySubjectDetailResp){}
  // 查询专题列表
  rpc QuerySubjectList(QuerySubjectListReq) returns (QuerySubjectListResp){}

  rpc SubjectListByIds(SubjectListByIdsReq) returns (QuerySubjectListResp){}

  //批量更新状态
  rpc UpdateSubjectRecommendStatus(UpdateSubjectRecommendStatusReq) returns (UpdateSubjectRecommendStatusResp){}

  //更新排序
  rpc UpdateSubjectSort(UpdateSubjectSortReq) returns (UpdateSubjectResp){}

}
